# power_pnl

./: LICENSE  README.md  app.py  clean.py  pyproject.toml  restricoes_geradas.txt
data/: base_dados.json
electric_models/: __init__.py  reability_mixin.py
electric_models/electric_elements/: __init__.py  capacitor.py  factory.py  interfaces.py  reactor.py
electric_models/generation/: __init__.py  base_generator.py  fictitious_generator.py  generator_factory.py  hydro_generator.py  thermal_generator.py  wind_generator.py
electric_models/generation/thermal/: __init__.py  biomass_generator.py  coal_generator.py  (+5 more)
electric_models/hydro/: __init__.py  hydro_plant.py  hydro_system.py
electric_models/power/: __init__.py  bus.py  deficit.py  line.py  load.py  power_system.py
electric_models/system/: __init__.py  full_system.py
electric_models/transformers/: __init__.py  dual_transformer.py  phase_transformer.py  tap_transformer.py  transformer.py  transformer_factory.py
power_pnl/: __init__.py
power_pnl/engine/: __init__.py  convexity.py  derivatives.py  lagrangian.py
power_pnl/interface/: __init__.py  model.py  objetivo.py
power_pnl/models/: __init__.py  constants.py  constraints.py  objective.py  variables.py
power_pnl/solver/: __init__.py  solver.py
power_pnl/symbolic/: __init__.py  chute_inicial.py  karush_kuhn_tucker.py  model_builder.py
reader/: __init__.py  loader.py
reports/: cubico.txt  cubico_oil.txt  cubico_rede_dc.txt  cubico_rede_dc_oil.txt  quadratica.txt  quadratica_oil.txt  quadratica_rede_dc.txt  quadratica_rede_dc_oil.txt
